# anisthesia

./: CMakeLists.txt  README.md
data/: players.anisthesia
include/: anisthesia.hpp
include/anisthesia/: matroska.hpp  media.hpp  player.hpp  util.hpp  win_open_files.hpp  win_platform.hpp  win_smtc.hpp  win_ui_automation.hpp  win_util.hpp  win_windows.hpp
src/: matroska.cpp  media.h  optional.h  player.cpp  player.h  util.cpp  util.h  win_open_files.cpp  win_platform.cpp  win_smtc.cpp  win_strategies.cpp  win_ui_automation.cpp  win_util.cpp  win_windows.cpp
src/common/: matroska.cpp  matroska.h
src/win/: automation.cpp  automation.h  open_files.cpp  open_files.h  platform.cpp  platform.h  process.cpp  process.h  strategies.cpp  strategies.h  ui_automation.cpp  ui_automation.h  util.cpp  util.h  window.cpp  window.h  windows.cpp  windows.h
src/win/strategy/: open_files.cpp  open_files.h  ui_automation.cpp  ui_automation.h  window_title.cpp  window_title.h
util/: Anisthesia.sublime-syntax
